src/flake8_quotes/snapshots/ruff__flake8_quotes__tests__doubles_doubles_multiline_string.py.snap
---
source: src/flake8_quotes/mod.rs
expression: checks
---
- kind:
    BadQuotesMultilineString: single
  location:
    row: 1
    column: 4
  end_location:
    row: 3
    column: 12
  fix: ~
  parent: ~

