src/flake8_quotes/snapshots/ruff__flake8_quotes__tests__single_docstring_docstring_doubles.py.snap
---
source: src/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    BadQuotesDocstring: single
  location:
    row: 1
    column: 0
  end_location:
    row: 3
    column: 3
  fix:
    content: "'''\nDouble quotes multiline module docstring\n'''"
    location:
      row: 1
      column: 0
    end_location:
      row: 3
      column: 3
  parent: ~
- kind:
    BadQuotesDocstring: single
  location:
    row: 12
    column: 4
  end_location:
    row: 14
    column: 7
  fix:
    content: "'''\n    Double quotes multiline class docstring\n    '''"
    location:
      row: 12
      column: 4
    end_location:
      row: 14
      column: 7
  parent: ~
- kind:
    BadQuotesDocstring: single
  location:
    row: 24
    column: 8
  end_location:
    row: 26
    column: 11
  fix:
    content: "'''\n        Double quotes multiline function docstring\n        '''"
    location:
      row: 24
      column: 8
    end_location:
      row: 26
      column: 11
  parent: ~

