src/flake8_quotes/snapshots/ruff__flake8_quotes__tests__single_docstring_docstring_doubles_function.py.snap
---
source: src/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    BadQuotesDocstring: single
  location:
    row: 2
    column: 4
  end_location:
    row: 2
    column: 56
  fix: ~
  parent: ~
- kind:
    BadQuotesDocstring: single
  location:
    row: 8
    column: 4
  end_location:
    row: 10
    column: 7
  fix: ~
  parent: ~
- kind:
    BadQuotesDocstring: single
  location:
    row: 27
    column: 4
  end_location:
    row: 27
    column: 27
  fix: ~
  parent: ~

