src/flake8_quotes/snapshots/ruff__flake8_quotes__tests__single_docstring_docstring_singles_class.py.snap
---
source: src/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    BadQuotesMultilineString: double
  location:
    row: 3
    column: 4
  end_location:
    row: 3
    column: 27
  fix:
    content: "\"\"\" Not a docstring \"\"\""
    location:
      row: 3
      column: 4
    end_location:
      row: 3
      column: 27
  parent: ~
- kind:
    BadQuotesMultilineString: double
  location:
    row: 5
    column: 22
  end_location:
    row: 5
    column: 43
  fix:
    content: "\"\"\"not a docstring\"\"\""
    location:
      row: 5
      column: 22
    end_location:
      row: 5
      column: 43
  parent: ~

